--- a/views/layout-user.pug
+++ b/views/layout-user.pug
@@ -14,13 +14,7 @@ html
       div(class="navbar-collapse")
         ul(class="navbar-nav")
           li(class="nav-item")
-            a(class="nav-link",href="/") Home 
-          li(class="nav-item")
-            a(class="nav-link",href="/profile/settings") Settings 
-          li(class="nav-item")
-            a(class="nav-link",href="/profile/followers") Invite 
-          li(class="nav-item")
-            a(class="nav-link",href="/profile/subscribers") Subscribers
+            a(class="nav-link",href="/") Create a JMEL link 
     div(class="container")
       br
       if messageText 
@@ -34,3 +28,4 @@ html
       a(href="/tnc") Terms of Use
       br
       br
+      
