--- a/views/new-user.pug
+++ b/views/new-user.pug
@@ -21,7 +21,7 @@ block content
     br
     br
     h1 Who's using JoinMyEmailList
-    table
+    table(class="table")
         each creator in creators
             tr
                 td @#{creator.usernameOriginal}
