--- a/views/users-new.pug
+++ b/views/users-new.pug
@@ -12,4 +12,5 @@ block content
     button(disabled, class="socialbutton facebook") Facebook
     button(disabled, class="socialbutton linkedin") LinkedIn
     br
+    p We will be collecting only your username and email address and nothing else #[a(href='/privacy') as per our privacy policy]
     
